appId: com.geronton.client
---
- launchApp:
    clearState: true
- tapOn:
    id: "login-email"
- inputText: "profissional@demo.com"
- tapOn:
    id: "login-password"
- inputText: "senha123"
- hideKeyboard
- tapOn:
    id: "login-submit"
- assertVisible:
    id: "professional-home"
